WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308255
[block-in-inline] Missing content when block is inside an inline box with layer
https://bugs.webkit.org/show_bug.cgi?id=308255
Summary
[block-in-inline] Missing content when block is inside an inline box with layer
alan
Reported
2026-02-19 16:48:32 PST
<
rdar://169816653
>
Attachments
Patch
(6.54 KB, patch)
2026-02-19 16:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.87 KB, patch)
2026-02-19 19:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-02-19 16:52:45 PST
Created
attachment 478413
[details]
Patch
alan
Comment 2
2026-02-19 19:44:52 PST
Created
attachment 478414
[details]
[fast-cq]Patch
EWS
Comment 3
2026-02-20 05:07:18 PST
Committed
307906@main
(a8d778d710a6): <
https://commits.webkit.org/307906@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478414
[details]
.
EWS
Comment 4
2026-02-24 12:54:03 PST
Committed
305413.346@safari-7624-branch
(3c7eab7aa75b): <
https://commits.webkit.org/305413.346@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4542 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug