Cherry-pick a8d778d710a6. rdar://171012923

[block-in-inline] Missing content when block is inside an inline box with layer
    https://bugs.webkit.org/show_bug.cgi?id=308255
    rdar://169816653

    Reviewed by Simon Fraser.

    Add missing geometry update for enclosing inline boxes. Non-bidi codepath already has it working.

    Test: fast/inline/block-in-inline-with-layer-missing-content.html

    * LayoutTests/fast/inline/block-in-inline-with-layer-missing-content-expected.html: Added.
    * LayoutTests/fast/inline/block-in-inline-with-layer-missing-content.html: Added.
    * LayoutTests/platform/ios/fast/dom/34176-expected.txt:
    * LayoutTests/platform/ios/fast/inline/inline-continuation-borders-expected.txt:
    * LayoutTests/platform/mac/fast/dom/34176-expected.txt:
    * LayoutTests/platform/mac/fast/inline/inline-continuation-borders-expected.txt:
    * Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
    (WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

     - this restriction has already been removed from the non-bidi codepath (see 303091@main) to
       support block-in-inline content.

    Canonical link: https://commits.webkit.org/307906@main

Identifier: 305413.346@safari-7624-branch